[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/punching_bag/IDLE.png" type="Texture" id=1]
[ext_resource path="res://chars/punching_bag/punching_bag.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 153.39 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65.6104, 155.921 )

[node name="punching_bag" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="body" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="body"]
texture = ExtResource( 1 )

[node name="Hurtbox" type="Area2D" parent="body"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/Hurtbox"]
modulate = Color( 0.0431373, 0.282353, 1, 1 )
position = Vector2( 0, 2.39 )
shape = SubResource( 1 )

[node name="ECB" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.0392157, 0.505882, 0, 1 )
shape = SubResource( 2 )
[connection signal="area_entered" from="body/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="body/Hurtbox" to="." method="_on_Hurtbox_area_exited"]
